--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="#" class="logo"><img src="img/logo.png" alt="">foodie</a>
-        <div class="bx bx-icon" id="menu-icon"></div>
+        <div><i class='bx bx-menu'></i></div>
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
