added the section element to the page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="#" class="logo"><img src="img/logo.png" alt="">foodie</a>
-        <div><i class='bx bx-menu'></i></div>
+        <div><i class="bx bx-menu" id="menu-icon"></i></div>
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -21,6 +21,56 @@
             <li><a href="#contact">contact</a></li>
         </ul>
     </header>
+    <!--Home-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <span>Welcome To Our</span>
+            <h1>Healty Food <br>Collection!</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, distinctio dignissimos consectetur nulla voluptas ea tenetur nesciunt dolorum voluptates dolore, asperiores est, obcaecati soluta quibusdam suscipit accusamus. Consequatur, odit minima.</p>
+            <a href="#" class="btn">Our Menu</a>
+        </div>
+        <div class="home-img">
+            <img src="img/salad.png" alt="">
+        </div>
+    </section>
+    <!--About-->
+    <section class="about" id="about">
+         <h1>Today's deal</h1>
+        <div class="about-container">
+            <!--box 1-->
+            <div class="about-box">
+                <div class="box-img">
+                    <img src="img/about1.png" alt="">
+                </div>
+                <h3>Green Salad</h3>
+                <h2>$ 12.4</h2>
+            </div>
+            <!--box 2-->
+            <div class="about-box">
+                <div class="box-img">
+                    <img src="img/about2.png" alt="">
+                </div>
+                <h3>Green Salad</h3>
+                <h2>$ 12.4</h2>
+            </div>
+            <!--box 3-->
+            <div class="about-box">
+                <div class="box-img">
+                    <img src="img/about3.png" alt="">
+                </div>
+                <h3>Green Salad</h3>
+                <h2>$ 12.4</h2>
+            </div>
+            <!--box 4-->
+            <div class="about-box">
+                <div class="box-img">
+                    <img src="img/about4.png" alt="">
+                </div>
+                <h3>Green Salad</h3>
+                <h2>$ 12.4</h2>
+            </div>
+        </div>       
+    </section>
     <script src="main "></script>
 </body>
 </html>
