--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
             </div>
         </div>       
     </section>
-    <script src="main "></script>
+    <script src="main.js"></script>
 </body>
 </html>
