added the shop section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,68 @@
             </div>
         </div>       
     </section>
+    <section class="shop" id="shop">
+        <div class="heading">
+            <h2>Food Shop</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos dolores, enim amet nobis corrupti maiores dolorem omnis modi laborum quia molestiae aliquid quas vero est nulla perspiciatis assumenda eum nesciunt.</p>
+        </div>
+        <div class="shop-container">
+            <!--shop box 1-->
+            <div class="shop-box">
+                <div class="shop-img">
+                    <img src="img/shop1.jpg" alt="">
+                </div>
+                <h3>Tasty food</h3>
+                <h2>$ 14.2</h2>
+                <i class='bx bxs-cart-add'></i>
+            </div>
+            <!--shop box 2-->
+            <div class="shop-box">
+                <div class="shop-img">
+                    <img src="img/shop2.jpg" alt="">
+                </div>
+                <h3>Tasty food</h3>
+                <h2>$ 14.2</h2>
+                <i class='bx bxs-cart-add'></i>
+            </div>
+            <!--shop box 3-->
+            <div class="shop-box">
+                <div class="shop-img">
+                    <img src="img/shop3.jpg" alt="">
+                </div>
+                <h3>Tasty food</h3>
+                <h2>$ 14.2</h2>
+                <i class='bx bxs-cart-add'></i>
+            </div>
+            <!--shop box 4-->
+            <div class="shop-box">
+                <div class="shop-img">
+                    <img src="img/shop4.jpg" alt="">
+                </div>
+                <h3>Tasty food</h3>
+                <h2>$ 14.2</h2>
+                <i class='bx bxs-cart-add'></i>
+            </div>
+            <!--shop box 5-->
+            <div class="shop-box">
+                <div class="shop-img">
+                    <img src="img/shop5.jpg" alt="">
+                </div>
+                <h3>Tasty food</h3>
+                <h2>$ 14.2</h2>
+                <i class='bx bxs-cart-add'></i>
+            </div>
+            <!--shop box 6-->
+            <div class="shop-box">
+                <div class="shop-img">
+                    <img src="img/shop6.jpg" alt="">
+                </div>
+                <h3>Tasty food</h3>
+                <h2>$ 14.2</h2>
+                <i class='bx bxs-cart-add'></i>
+            </div>
+        </div>
+    </section>
     <script src="main.js"></script>
 </body>
 </html>
