added the customer's section but yet to be styled

--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
             </div>
         </div>
     </section>
+    <ssection class="customer" id="customer">
+        <div class="heading">
+            <h2>Our Customer's</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos dolores.</p>
+        </div>
+        <div class="customer-container">
+            <div class="box">
+                <img src="img/c1.jpg" alt="">
+            </div>\
+            <div class="stars">
+                
+            </div>
+        </div>
+    </ssection>
     <script src="main.js"></script>
 </body>
 </html>
