--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <img src="img/shop5.jpg" alt="">
                 </div>
                 <h3>Tasty food</h3>
-                <h2>$ 14.2</h2>
+              <i class='bx bxs-star-half'></i>  <h2>$ 14.2</h2>
                 <i class='bx bxs-cart-add'></i>
             </div>
             <!--shop box 6-->
@@ -139,11 +139,47 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos dolores.</p>
         </div>
         <div class="customer-container">
+            <!--customer 1-->
             <div class="box">
                 <img src="img/c1.jpg" alt="">
-            </div>\
-            <div class="stars">
-                
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.     Magni commodi fuga ullam exercitationem reprehenderit eaque.
+                </p>
+                <h2>Taylor Swift</h2>
+            </div>
+            <!--customer 2-->
+            <div class="box">
+                <img src="img/c2.jpg" alt="">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.     Magni commodi fuga ullam exercitationem reprehenderit eaque.
+                </p>
+                <h2>Zyan Malik</h2>
+            </div>
+            <!--customer 3-->
+            <div class="box">
+                <img src="img/c1.jpg" alt="">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.     Magni commodi fuga ullam exercitationem reprehenderit eaque.
+                </p>
+                <h2>Ketty Perry</h2>
             </div>
         </div>
     </ssection>
