--- a/index.html
+++ b/index.html
@@ -183,6 +183,38 @@
             </div>
         </div>
     </ssection>
+    <section class="contact" id="contact">
+        <div class="heading">
+            <h2>Contact Us</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="contact-container">
+            <div class="contact-info">
+                <h2>Get In Touch</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus ab.</p>
+                <div class="adress">
+                    <i class='bx bxs-map'></i><span>44 Street NYC, USA 10001</span>
+                    <i class='bx bxs-phone'></i><span>+1 100 104 40001</span>
+                    <i class='bx bxs-envelope'></i><span>contact@foodie.com</span>
+                </div>
+                <div class="social">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-twitter'></i></a>
+                </div>
+            </div>
+
+            <div class="contact-form">
+                <form action="">
+                    <input type="text" placeholder="Name*">
+                    <input type="email" placeholder="Email*">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input type="button" value="Submit" class="btn">
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
