added some stylying to the adress, contact form, social
also made changes to the div housing the adress class

--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
         <div class="contact-container">
             <div class="contact-info">
                 <h2>Get In Touch</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus ab.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus abyyyyyummm.</p>
                 <div class="adress">
-                    <i class='bx bxs-map'></i><span>44 Street NYC, USA 10001</span>
-                    <i class='bx bxs-phone'></i><span>+1 100 104 40001</span>
-                    <i class='bx bxs-envelope'></i><span>contact@foodie.com</span>
+                    <i class='bx bxs-map'><span>44 Street NYC, USA 10001</span></i>
+                    <i class='bx bxs-phone'><span>+1 100 104 40001</span></i>
+                    <i class='bx bxs-envelope'><span>contact@foodie.com</span></i>
                 </div>
                 <div class="social">
                     <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -214,7 +214,8 @@
             </div>
         </div>
     </section>
-
+    <!-- copyright -->
+    
     <script src="main.js"></script>
 </body>
 </html>
