added the footer element
added css media querries

--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
         </div>
     </section>
     <!-- copyright -->
-    
+    <div class="copyright">
+        <p>&#169; KelvinObuvie All Rights Reserved.</p>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
