Changed the conatact adress

--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
                 <h2>Get In Touch</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus abyyyyyummm.</p>
                 <div class="adress">
-                    <i class='bx bxs-map'><span>44 Street NYC, USA 10001</span></i>
-                    <i class='bx bxs-phone'><span>+1 100 104 40001</span></i>
-                    <i class='bx bxs-envelope'><span>contact@foodie.com</span></i>
+                    <i class='bx bxs-map'><span>44 Street Lagos, Lagos 10001</span></i>
+                    <i class='bx bxs-phone'><span>+234 100 104 40001</span></i>
+                    <i class='bx bxs-envelope'><span>KelvinObuvie@gmail.com</span></i>
                 </div>
                 <div class="social">
                     <a href="#"><i class='bx bxl-facebook'></i></a>
